exercice fini intro 01

--- a/3 janvier/Introduction/index_intro01.html
+++ b/3 janvier/Introduction/index_intro01.html
@@ -27,7 +27,7 @@
 	</body>
 	<script>
 		console.log ('--------------------------'); //POUR SEPARER LE CODE DANS LA CONSOLE
-		
+
 		//Je déclare ma variable age / Pour tester, je change juste ma valeur soit 17
 		let age = 16;
 
@@ -133,8 +133,10 @@
 
 		let isAdmin = false
 
-		if(isAdmin!=true){
+		if(isAdmin!=false){          // != veut dire n'est pas égale - C'est un outil de comparaison
 			console.log('PAS ADMIN')
+		} else {
+			console.log('ADMIN')
 		};
 
 
