--- a/13 janvier/classList/index.html
+++ b/13 janvier/classList/index.html
@@ -31,9 +31,14 @@
 			<button id='toggle'> toggle </button>
 
 		</div>
+
+		<p id="description">La classList TOGGLE est la combinaison de ADD & REMOVE
+			classList.toggle permet de cliquer pour ouvrir un élément puis recliquer sur l'élément pour le fermer </p>
 	</div>
 
 	</body>
+
+
 	<script>
 		let divOne = document.getElementById('divOne')
 		let divTwo = document.getElementById('divTwo')
@@ -63,6 +68,8 @@
 		function toggleClass(){
 			divThree.classList.toggle('highlight')
 		}
+
+		
 		
 	</script>
 </html>
