--- a/18 janvier/createElement/createElementIntro.html
+++ b/18 janvier/createElement/createElementIntro.html
@@ -29,7 +29,7 @@
 	<script>
 		document.querySelector('#a-supprimer').remove();
 
-		// Créer les éléments
+		// Créer les éléments des balises HTML
 		let header = document.createElement('header');
 		let menu   = document.createElement('div');
 		let p      = document.createElement('p');
