commit fin 30 janvier

--- a/13 janvier/Tableaux/array.html
+++ b/13 janvier/Tableaux/array.html
@@ -69,5 +69,7 @@
 		console.log(arrayUsers.reverse())
 	
 
+		// .unshift() permet de placer un nouvel index au début du tableau
+
 	</script>
 </html>
