--- a/13 janvier/classList/index.html
+++ b/13 janvier/classList/index.html
@@ -43,8 +43,6 @@
 		let divOne = document.getElementById('divOne')
 		let divTwo = document.getElementById('divTwo')
 		let divThree = document.getElementById('divThree')
-
-		// ajouter une classe 
 		
 
 		// retirer une classe 
@@ -60,13 +58,13 @@
 		toggle.addEventListener('click',toggleClass)
 
 		function addClass(){
-			divOne.classList.add('success')
+			divOne.classList.add('success')		// ajouter une classe 
 		}
 		function removeClass(){
-			divTwo.classList.remove('alert')
+			divTwo.classList.remove('alert')	// Retirer une classe
 		}
 		function toggleClass(){
-			divThree.classList.toggle('highlight')
+			divThree.classList.toggle('highlight')	// ajouter et retirer une classe en clickant 2 fois 
 		}
 
 		
