--- a/13 janvier/classList/index_QuerySelector.html
+++ b/13 janvier/classList/index_QuerySelector.html
@@ -36,9 +36,9 @@
 	</body>
 	<script>
 		
-		let monH1 = document.querySelector("h1")
-		let babyDiv = document.querySelectorAll(".subDiv > .babyDiv")
-		let add = document.querySelector("#add")
+		let monH1 = document.querySelector("h1")						//<-- Récupère la balise h1
+		let babyDiv = document.querySelectorAll(".subDiv > .babyDiv")	//<-- Récupere l'enfant de la class .subDiv
+		let add = document.querySelector("#add")						//<-- Recupere l'Id de button '#add'
 		console.log(babyDiv)
 		babyDiv[0].style.backgroundColor ='cyan'
 
