--- a/4 janvier/Events/index_toggleImage.html
+++ b/4 janvier/Events/index_toggleImage.html
@@ -29,6 +29,9 @@
 
 	</body>
 	<script>
+
+		// Changement d'image à chaque 'click' sur la photo
+		
 		let monImage = document.getElementById('monImage');
 		let newImage = 'marek.jpg';
 		let oldImage = 'alex.jpg';
