--- a/4 janvier/Events/spoilerFree_correction.html
+++ b/4 janvier/Events/spoilerFree_correction.html
@@ -30,7 +30,7 @@
 		// initialisation 
 		maDiv.style.display='none'
 
-		// attacher un evt sur mon bouton 
+		// attacher un evenement sur mon bouton 
 
 		monBtn.addEventListener('click',handleSpoilerBtn)
 
