--- a/4 janvier/Functions/functions_return.html
+++ b/4 janvier/Functions/functions_return.html
@@ -31,6 +31,8 @@ console.log('appZoom')
 
 	</body>
 	<script>
+		// A REVISER
+
 		// pense-bête : nous sommes le 26-04-2021
 		let monH1  = document.getElementById('monH1');
 		let monBtn = document.getElementById('monBtn');
@@ -50,7 +52,6 @@ console.log('appZoom')
 			return dateFr // me fait SORTIR de la fonction 
 			console.log('jamais ici')
 			
-
 		}		
 		
 		document.getElementById('footer').textContent  = dateEnFr()
