--- a/13 janvier/classList/index_QuerySelector.html
+++ b/13 janvier/classList/index_QuerySelector.html
@@ -40,7 +40,7 @@
 		let babyDiv = document.querySelectorAll(".subDiv > .babyDiv")	//<-- Récupere l'enfant de la class .subDiv
 		let add = document.querySelector("#add")						//<-- Recupere l'Id de button '#add'
 		console.log(babyDiv)
-		babyDiv[0].style.backgroundColor ='cyan'
+		babyDiv[0].style.backgroundColor ='cyan' //On recupere l'index 0 et on change la couleur du background
 
 
 		console.log(monH1)
