--- a/28 janvier/Le juste prix/indexDepart.html
+++ b/28 janvier/Le juste prix/indexDepart.html
@@ -84,23 +84,7 @@
 </div>
 </body>
 
-<script src='script.js' >
-  // Etape 1 - Sélectionner nos éléments
-
-
-// Etape 2 - Cacher l'erreur
-
-
-// Etape 3 - Générer un nombre aléatoire
-
-
-// Etape 6 - Créer la fonction vérifier
-
-
-// Etape 4 - Vérifier que l'utilisateur donne bien un nombre
-
-
-// Etape 5 - Agir à l'envoi du formulaire
+<script src="justePrix.js">
 
 </script>
   
