soir 31 janvier modifications

--- a/3 janvier/Introduction/index_intro00.html
+++ b/3 janvier/Introduction/index_intro00.html
@@ -31,7 +31,7 @@
 		let prenom = "Cynthia"
 		let nom    = "Colombel"
 		let hobbie = "Graphisme"
-
+				let logo = document.querr
 		//On affiche : 
 		console.log("je m'appelle "+prenom+" "+nom+ ", et j'aime le "+hobbie+".")
 
@@ -39,7 +39,7 @@
 
 		//On déclare les variables : 
 		let prix = 15 
-		let taxe = 2 
+		let taxe = 2
 		
 		let qty  = 3
 		 
