--- a/4 janvier/Functions/functions_date.html
+++ b/4 janvier/Functions/functions_date.html
@@ -52,7 +52,8 @@
 		let dateFr  = dateEnFr()
 		monH1.innerHTML = dateFr;
 		document.title  = dateFr
-		// monBtn.addEventListener('click',dateEnFr)
+		monBtn.addEventListener('click',dateEnFr)
+		monBtn.textContent = 'on est quel jour' //Quand on clique sur le bouton renvoie dans la console la date d'aujourd'hui
 
 
 
