--- a/4 janvier/Functions/functions_intro.html
+++ b/4 janvier/Functions/functions_intro.html
@@ -30,6 +30,8 @@
 
 	</body>
 	<script>
+
+
 	// je déclare ma fonction sans paramètre
 	function allumeFour180(){
 		console.log("j'allume le four a 180°")
@@ -60,7 +62,7 @@
 		let elem = document.getElementById(elemId)  //<------- Recupere tous les elements avec un ID
 		if(erreur){
 			elem.style.backgroundColor = 'red';
-			elem.innerHTML = erreur;
+			//elem.innerHTML = erreur;
 		}else{
 			elem.style.backgroundColor = couleur;
 		}
