--- a/13 janvier/Citations/citations_unique.html
+++ b/13 janvier/Citations/citations_unique.html
@@ -74,7 +74,7 @@ function newCitation(){
 	let nombreAlea    = getRandomInt(0,citations.length) //Grace a un nombre aléeatoire
 	laDiv.textContent = citations[nombreAlea]
 	// ici j'enlève la citation qui vient d'être tirée
-	citations.splice(nombreAlea,1)						//splice : ??????????? 
+	citations.splice(nombreAlea,1)						//splice : Supprime le premier element du tableau
 	if(citations.length==0){
 		cardTitle.textContent = "fini:("
 	}else{
